fix background dark mode

--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,6 +1,7 @@
 .container {
 	display: flex;
 	margin-top: var(--default-header-height);
+	background: var(--default-background-color);
 }
 
 .content {
